# zswag

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  COMMIT_PREPARATION.md  EXAMPLE_CMakeLists.txt  GETTING_STARTED_JAVA.md  LICENSE  NEXT_STEPS.md  README.md  README_FETCHCONTENT.md  SUMMARY_OF_CHANGES.md  build.gradle  codecov.yml  conanfile.py  conanfile.txt  deploy.sh  fetch_dependencies.sh  fetch_dependencies.sh.readme  gradle.properties  requirements.txt  settings.gradle  setup.py  sonar-project.properties
.github/: pull_request_template.md
.github/scripts/: determine_version.py  validate_version.py
.github/workflows/: build-deploy.yml  cmake.yml  coverage.yml  deploy.yaml  jzswag.yml
cmake/: Dependencies.cmake  Dependencies.cmake.readme  OpenSSL.cmake  conan-provider.cmake  coverage.cmake  deps.cmake  fetch_deps_with_conan.cmake
coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage/__w/zswag/zswag/libs/httpcl/src/: http-client.cpp.func-sort-c.html  http-client.cpp.func.html  http-client.cpp.gcov.html  http-settings.cpp.func-sort-c.html  http-settings.cpp.func.html  http-settings.cpp.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  log.cpp.func-sort-c.html  log.cpp.func.html  log.cpp.gcov.html  oauth1-signature.cpp.func-sort-c.html  oauth1-signature.cpp.func.html  oauth1-signature.cpp.gcov.html  uri.cpp.func-sort-c.html  uri.cpp.func.html  uri.cpp.gcov.html
coverage/__w/zswag/zswag/libs/zswagcl/src/: base64.cpp.func-sort-c.html  base64.cpp.func.html  base64.cpp.gcov.html  index-detail-sort-b.html  index-detail-sort-f.html  index-detail-sort-l.html  index-detail.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  oaclient.cpp.func-sort-c.html  oaclient.cpp.func.html  (+16 more)
doc/: zswag-architecture.mdj
docs/: cpp.md  http-settings.md  java.md  openapi-generator.md  python.md  release-process.md
examples/jzswag-aaos/: build.gradle
examples/jzswag-cli/: build.gradle
libs/common/: CMakeLists.txt
libs/common/include/zswag/: compat.hpp  test_common.hpp
libs/common/test/: compat_test.cpp  main.cpp
libs/http-client/: CMakeLists.txt
libs/http-client/include/http-client/: http-client.hpp  http-settings.hpp  uri.hpp
libs/http-client/src/: http-client.cpp  http-settings.cpp  uri.cpp
libs/http-client/test/: CMakeLists.txt
libs/http-client/test/src/: uri.cpp
libs/httpcl/: CMakeLists.txt
libs/httpcl/include/httpcl/: compat.hpp  http-client.hpp  http-settings.hpp  log.hpp  oauth1-signature.hpp  uri.hpp
libs/httpcl/src/: http-client.cpp  http-settings.cpp  log.cpp  oauth1-signature.cpp  uri.cpp
libs/httpcl/test/: CMakeLists.txt
libs/httpcl/test/src/: http-client.cpp  http-settings-test.cpp  http-settings.cpp  log.cpp  oauth1-signature-test.cpp  uri.cpp
libs/jzswag-android/: README.md  build.gradle
libs/jzswag-api/: README.md  build.gradle
libs/jzswag-desktop/: README.md  build.gradle
libs/jzswag-jvm/: README.md  build.gradle
libs/jzswag-shared/: README.md  build.gradle
libs/jzswag-shared/src/test/resources/: test-openapi.yaml
libs/jzswag-test/: README.md  build.gradle  test-java-client.bash
libs/jzswag/jzswag-android/: README.md  build.gradle
libs/jzswag/jzswag-api/: README.md  build.gradle
libs/jzswag/jzswag-jvm/: README.md  build.gradle
libs/jzswag/jzswag-shared/: README.md  build.gradle
libs/jzswag/jzswag-test/: README.md  build.gradle  test-java-client.bash
libs/pyzswagcl/: CMakeLists.txt  py-openapi-client.cpp  py-openapi-client.h  py-zswagcl.cpp  pyzswagcl.cpp
libs/pyzswagcl/test/: client.py
libs/zsr-service-client/: CMakeLists.txt
libs/zsr-service-client/include/zsr-service-client/: http-service.hpp
libs/zsr-service-client/src/: base64.cpp  base64.hpp  http-service.cpp
libs/zsr-service-client/test/: CMakeLists.txt
libs/zsr-service-client/test/src/: base64.cpp  http-service.cpp  service_client_test.zs
libs/zsr-service-client/test/testdata/: full-1.json
libs/zswacl/include/zsr-service-client/: openapi-parser.hpp
libs/zswacl/src/: openapi-parser.cpp
libs/zswag/: __init__.py  app.py  doc.py  gen.py  reflect.py  request.py
libs/zswag/test/: .gitignore  CMakeLists.txt  __init__.py  calculator.zs  client.cpp  run_calc.py  run_oauth2_mock.py  test_integration.bash  test_openapi_generator.bash  test_openapi_generator_1.yaml  test_openapi_generator_2.yaml  test_openapi_generator_3.yaml  test_openapi_generator_base_config.yaml
libs/zswag/test/calc/: __init__.py  __main__.py  api.yaml  calculator.zs  client.py  server.py
libs/zswag/test/oauth2_mock/: README.md  __init__.py  __main__.py  oauth1_validator.py  oauth_test.yaml  oauth_test.zs  server.py  test_oauth_e2e.py
libs/zswag/test/test_nested_service/: services.zs
libs/zswagcl/: CMakeLists.txt
libs/zswagcl/include/zswagcl/: export.hpp  http-service.hpp  oaclient.hpp  openapi-client.hpp  openapi-config.hpp  openapi-parameter-helper.hpp  openapi-parser.hpp  zsr-client.hpp
libs/zswagcl/include/zswagcl/private/: openapi-client.hpp  openapi-config.hpp  openapi-oauth.hpp  openapi-parameter-helper.hpp  openapi-parser.hpp  openapi-security.hpp
libs/zswagcl/src/: base64.cpp  base64.hpp  http-service.cpp  oaclient.cpp  openapi-client.cpp  openapi-config.cpp  openapi-oauth.cpp  openapi-parameter-helper.cpp  openapi-parser.cpp  openapi-security.cpp  zsr-client.cpp
libs/zswagcl/test/: CMakeLists.txt
libs/zswagcl/test/src/: base64.cpp  http-service-format.cpp  http-service.cpp  oaclient.cpp  oauth2-integration-test.cpp  oauth2-test.cpp  openapi-parameter-helper.cpp  service_client_test.zs  zsr-client.cpp
libs/zswagcl/test/testdata/: auth.yaml  config-template.json  config-with-auth.json  dummy.json  oauth2-openapi.yaml  oauth2-settings.yaml
src/zswag/: __init__.py  app.py  client.py  gen.py
src/zswag_client/: __init__.py  client.py  spec.py
test/calc/: __main__.py  calculator.zs  client.py  server.py
test_package/: CMakeLists.txt  test_package.cpp
(+217 files in other folders)
